--- a/Application.xaml
+++ b/Application.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="Application"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:SeewoStart"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
-
+        
     </Application.Resources>
 </Application>
