--- a/Window2.xaml
+++ b/Window2.xaml
@@ -1,40 +1,23 @@
-﻿<Window x:Class="Window2"
+﻿<Window x:Class="Window2" AllowsTransparency="True" Background="Transparent"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:SeewoStart"
         mc:Ignorable="d"
-        Title="希沃白板 - 正在更新" Height="151.6" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="希沃原板 - 正在更新" Height="53.6" Width="800" ResizeMode="NoResize" WindowStartupLocation="Manual" WindowStyle="None" Visibility="Visible">
     <Window.Resources>
         <Storyboard x:Key="ColorAnimation">
             <ColorAnimation
-                Storyboard.TargetProperty="(ProgressBar.Foreground).(SolidColorBrush.Color)"
-                From="Red" To="Blue" Duration="0:0:1"
-                AutoReverse="True" RepeatBehavior="Forever" />
+            Storyboard.TargetProperty="(ProgressBar.Foreground).(SolidColorBrush.Color)"
+            From="Red" To="Blue" Duration="0:0:1"
+            AutoReverse="True" RepeatBehavior="Forever" />
         </Storyboard>
     </Window.Resources>
+    <Border Background="#FFEBDAE0" CornerRadius="20">
     <Grid>
-        <ProgressBar x:Name="ProgressBar1" HorizontalAlignment="Left" Height="34.4" Margin="17.8,40.8,0,0"
-                     VerticalAlignment="Top" Width="758.4" RenderTransformOrigin="1,0.5" UseLayoutRounding="False"
-                     Foreground="#FF2ACDFF" IsIndeterminate="True">
-            <ProgressBar.Style>
-                <Style TargetType="ProgressBar">
-                    <Style.Triggers>
-                        <Trigger Property="IsIndeterminate" Value="True">
-                            <Trigger.EnterActions>
-                                <BeginStoryboard Storyboard="{StaticResource ColorAnimation}" />
-                            </Trigger.EnterActions>
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </ProgressBar.Style>
-        </ProgressBar>
-        <TextBlock x:Name="w1" HorizontalAlignment="Left" Margin="27.4,12.2,0,0" TextWrapping="Wrap"
-                   VerticalAlignment="Top" FontSize="16" FontWeight="Bold">
-            <Run Text="正在" /><Run Text="更新" /><Run Text=" 希沃白板" /><Run Text="……" />
-        </TextBlock>
-        <TextBlock x:Name="w" HorizontalAlignment="Left" Margin="20.2,81.2,0,0" TextWrapping="Wrap"
-                   VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Text="请勿强制关闭 希沃白板……" />
-
+        <Image x:Name="image1" HorizontalAlignment="Left" Height="33.6" Margin="10,10,0,0" VerticalAlignment="Top" Width="38" Source="default-img/81.ico"/>
+        <TextBlock x:Name="w1" HorizontalAlignment="Left" Height="33.6" Margin="51.9,10,0,0" TextWrapping="Wrap" Text="正在更新配置，请稍后..." VerticalAlignment="Top" Width="726.056" FontFamily="/SeewoStart;component/Font/#HarmonyOS Sans SC Black" FontSize="25"/>
     </Grid>
+    </Border>
 </Window>
