--- a/Emergency-mode.xaml
+++ b/Emergency-mode.xaml
@@ -1,4 +1,4 @@
-﻿<Window
+<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -96,7 +96,7 @@
             </TextBlock.RenderTransform>
         </TextBlock>
         <TextBlock x:Name="oon" Height="21.667" Margin="3.047,207.324,3.047,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="/SeewoStart;component/Font/#HarmonyOS Sans SC Black" FontSize="18" Foreground="#FF0303EC" Width="279" TextAlignment="Center"><Run Text="已停用应急模式"/><LineBreak/><Run/></TextBlock>
-        <TextBlock x:Name="in1" Height="72.333" Margin="0,236.392,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="/SeewoStart;component/#HarmonyOS Sans SC Black" FontSize="14" TextAlignment="Center"><Run Text="你的 定制启动器 不是"/><Run FontWeight="Bold" Text=" 私密的"/></TextBlock>
+        <TextBlock x:Name="in1" Height="72.333" Margin="0,236.392,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="/SeewoStart;component/Font/#HarmonyOS Sans SC Black" FontSize="14" TextAlignment="Center"><Run Text="你的 定制启动器 不是"/><Run FontWeight="Bold" Text=" 私密的"/></TextBlock>
         <ToggleButton x:Name="_114514warp" Content="" HorizontalAlignment="Center" Height="54.969" Margin="0,75.937,0,0" VerticalAlignment="Top" Width="134.548">
             <ToggleButton.Style>
                 <Style TargetType="ToggleButton">
